--- a/css/styles-text.css
+++ b/css/styles-text.css
@@ -117,6 +117,7 @@ main {
   top: 0;
   bottom: 0;
   height: var(--card-heit);
+  width: 100%;
   transition: all .8s;
   backface-visibility: hidden;
 }
@@ -129,12 +130,27 @@ main {
   transform: rotateY(-180deg);
 }
 
-.card:hover .card__side--front {
+/*.card:active .card__side--front {*/
+/*  transform: rotateY(180deg);*/
+/*}*/
+
+/*.card:active .card__side--back {*/
+/*  transform: rotateY(0);*/
+/*}*/
+.card--rotated .card__side--front {
   transform: rotateY(180deg);
 }
 
-.card:hover .card__side--back {
+.card--rotated .card__side--back {
   transform: rotateY(0);
+}
+
+.reverse-btn {
+  position: absolute;
+  top: 3px;
+  right: 5px;
+  font-size: 2rem;
+  cursor: pointer;
 }
 
 .item--table .item-card {
@@ -175,7 +191,12 @@ main {
   width: 160px;
 }
 
-.item__ingredient select {
+.select-option {
+  text-align: left;
+}
+
+.add-ingredient {
+  margin-left: 15px;
   border: 1px solid gainsboro;
   border-radius: 3px;
   font-family: serif;
@@ -184,25 +205,25 @@ main {
 
 .item__btn-edit {
   position: relative;
-  left: 140px;
-  margin-top: 5px;
+  left: 60px;
+  top: 15px;
 }
 
 .item__btn-save {
   position: relative;
-  left: 180px;
+  top: 15px;
+  left: 80px;
 }
 
-.item__ingredient span {
+.interactive-element {
   font-size: .8rem;
   cursor: pointer;
 }
-
 .card__side--back .item__ingredients {
   text-align: center;
 }
 
-.card__side--back .item__ingredients:first-letter {
+.item__ingredients--list:first-letter {
   text-transform: uppercase;
 }
 
@@ -220,27 +241,27 @@ main {
   font-size: 1.8rem;
 }
 
-.items-wrapper--list {
+.item--list {
   width: 100%;
   border: 1px solid grey;
 }
 
-.items-wrapper--list .item__ingredient {
+.item--list .item {
   margin: 5px;
   display: flex;
   align-items: center;
 }
 
-.items-wrapper--list .item__price {
-  float: none;
+.item--list .item__price {
   margin: 0;
+  position: relative;
 }
 
-.items-wrapper--list .item__name {
+.item--list .item__name {
   min-width: 300px;
 }
 
-.items-wrapper--list .item__logo {
+.item--list .item__logo {
   height: 50px;
   margin-right: 30px;
 }
